# unitree_ros2

./: setup.sh  spec.md
dance_orchestrator/: README.md  dance_final.json  test_9.json
dance_orchestrator/config/: moves.json
dance_orchestrator/include/: move_registry.hpp
dance_orchestrator/src/: CMakeLists.txt  package.xml
dance_orchestrator/src/include/: cli_interface.hpp  dance_move.hpp  dance_orchestrator.hpp  dance_sequence.hpp  move_registry.hpp
dance_orchestrator/src/src/: cli_interface.cpp  dance_orchestrator.cpp  main.cpp  move_registry.cpp
example/src/src/common/: ros2_sport_client.cpp
example/src/src/go2/: go2_sport_client.cpp
